# Bot_lista_de_compras_discord

./: README.md
bot-da-lista/: README.md  pyproject.toml
bot-da-lista/src/bot_da_lista/: main.py
